--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+.course{
+  display: grid;
+  grid-template-columns: repeat(3,2fr);
+  padding-bottom: 13%;
+
+}
+.footer{
+  padding: auto;
+ position: relative;
+  color: blue;
+}
