--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  text-align: left;
+    display: grid;
+    grid-template-columns: repeat(4, 2fr);
+  font-size: 30px;
+    
 }
 
 .App-logo {
@@ -50,5 +54,11 @@
 ul{
   display: flex;
   justify-content: space-around;
-}
 
+}
+.getdisplay{
+  
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  
+}
